web/themes/custom/ys_admin_theme/css/gin-custom.css
/* stylelint-disable */
:root {
  --gin-font: Mallory, sans-serif;
  --gin-font-size-h1: 1.75rem;
  --gin-font-size-h2: 1.5rem;
  --gin-font-size-h3: 1.25rem;
  --gin-border-m: 0.313rem;
}
:root h1,
:root h2 {
  font-weight: 600;
}

::selection {
  background: var(--mediterranean-blue) !important;
  color: var(--wool) !important;
}

.region-sticky__items .block-page-title-block .page-title {
  color: var(--wool);
}

.gin--dark-mode .form-element--type-select {
  background-color: var(--dark-theme-gray);
}

.gin--dark-mode .field-plugin-settings-edit {
  background-color: var(--wool);
}

.gin-layer-wrapper,
.block-system-main-block > form,
.views-exposed-form.views-exposed-form,
.views-edit-view,
.views-preview-wrapper,
#views-entity-list,
.module-filter-update-status-form .table-filter,
.admin.my-workbench {
  background-color: var(--dark-theme-gray) !important;
}

.gin--dark-mode .glb-claro-details__summary::after,
.gin--dark-mode .messages,
.gin--dark-mode .gin-layer-wrapper,
.gin--dark-mode .gin-layer-wrapper-shadow,
.gin--dark-mode .block-system > form,
.gin--dark-mode .views-exposed-form.views-exposed-form,
.gin--dark-mode .views-edit-view,
.gin--dark-mode .views-preview-wrapper,
.gin--dark-mode .modules-tabs,
.gin--dark-mode .module-filter-update-status-form .table-filter,
.gin--dark-mode #views-entity-list,
.gin--dark-mode .admin.my-workbench,
[dir=ltr] .button--primary,
[dir=ltr] .button--primary:not(:focus),
[dir=ltr] .ief-entity-submit,
.gin--dark-mode .glb-button,
.gin--dark-mode .inline-block-create-button,
.gin--dark-mode .layout-builder__link--add,
.gin--dark-mode .glb-button:not(:focus),
.gin--dark-mode .inline-block-create-button:not(:focus),
.gin--dark-mode .layout-builder__link--add:not(:focus),
.gin--dark-mode .form-actions .glb-button,
.gin--dark-mode .form-actions .inline-block-create-button,
.gin--dark-mode .form-actions .layout-builder__link--add,
.gin--dark-mode .glb-action-link--icon-trash.glb-action-link,
.gin--dark-mode .glb-button,
.gin--dark-mode .inline-block-create-button,
.gin--dark-mode .layout-builder__link--add,
.gin--dark-mode .glb-button:not(:focus),
.gin--dark-mode .inline-block-create-button:not(:focus),
.gin--dark-mode .layout-builder__link--add:not(:focus),
.gin--dark-mode .form-actions .glb-button,
.gin--dark-mode .form-actions .inline-block-create-button,
.gin--dark-mode .form-actions .layout-builder__link--add,
.gin--dark-mode .glb-action-link--icon-trash.glb-action-link {
  box-shadow: unset !important;
}

/* Target accordions and give them a darker background */
.gin--dark-mode .claro-details__summary,
.gin--dark-mode .glb-claro-details__summary {
  background-color: var(--darkest-gray) !important;
}

/* views forms */
.gin--dark-mode .views-ui-admin-settings-basic,
.gin--dark-mode .views-ui-admin-settings-advanced {
  background-color: var(--darkest-gray) !important;
}

.gin--dark-mode .gin-secondary-toolbar.layout-container {
  background: rgba(var(--dark-theme-gray-rgb), 1);
  margin-left: 0 !important;
  margin-right: 0 !important;
  padding: 0.5rem 2rem;
}

.gin--dark-mode[dir=ltr] .gin--edit-form .gin-secondary-toolbar {
  left: unset;
  transform: unset;
}

.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:hover,
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:active {
  background-color: var(--darkest-gray);
}

.gin--dark-mode .toolbar-tray-horizontal ul li.menu-item--expanded ul li.menu-item--expanded::before {
  background-color: var(--wool);
}

.is-horizontal .tabs--primary .tabs__link.is-active {
  background: var(--dark-theme-gray) !important;
}

.inline-block-create-button,
.layout-builder__link--add,
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actions .glb-button,
.form-actions .inline-block-create-button,
.form-actions .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link,
.meta-sidebar__trigger.is-active,
.meta-sidebar__close.is-active {
  background-color: var(--gin-color-primary-light) !important;
}

.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.glb-button:not(:focus),
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actions .glb-button,
.form-actions .inline-block-create-button,
.form-actions .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link {
  border-radius: 2.5rem !important;
  border: 2px solid transparent !important;
}

.action-link.action-link--danger {
  background-color: var(--wool);
}

.action-link--icon-trash.action-link--danger:hover,
.action-link.action-link--danger:hover {
  background-color: transparent;
  color: var(--wool) !important;
}

/* icons */
.action-link:hover::before {
  background: var(--robin-egg) !important;
}

/* forms */
.gin--dark-mode .form-element,
.gin--dark-mode .glb-form-element {
  background-color: var(--darkest-gray) !important;
}

::placeholder {
  color: var(--wool) !important;
  opacity: 0.8;
}

.gin--dark-mode :not(.form-checkboxes):not(td):not(.tabledrag-cell-content__item):not(.media-library-item__click-to-select-checkbox):not(.field-content) > .form-type--checkbox input:checked ~ .checkbox-toggle .checkbox-toggle__inner::before {
  background-color: var(--darkest-gray) !important;
}

.gin--dark-mode .form-boolean--type-checkbox:not(:checked) + .checkbox-toggle .checkbox-toggle__inner {
  background-color: var(--dark-theme-gray) !important;
}

.gin--dark-mode table th {
  background: var(--darkest-gray);
}

[data-drupal-selector=edit-enable-darkmode] .form-radios input:checked + .form-item__label {
  background: var(--dark-theme-gray);
}

/* chosen overrides */
.gin--dark-mode .chosen-container .chosen-results li.highlighted {
  background-color: var(--gin-color-primary);
  color: var(--darkest-gray);
}

.gin--dark-mode .chosen-container-single .chosen-single span {
  color: var(--wool);
}

.gin--dark-mode .chosen-search-input,
.gin--dark-mode .chosen-search-input::placeholder {
  color: var(--dark-theme-gray) !important;
}

/* remove media button */
.gin--dark-mode .media-library-add-form__remove-button {
  background-color: var(--robin-egg);
  color: var(--darkest-gray);
}

.gin--dark-mode .ui-autocomplete .ui-menu-item-wrapper {
  color: var(--wool);
}

.gin--dark-mode .ui-autocomplete .ui-menu-item-wrapper.ui-state-active {
  background-color: var(--dark-theme-gray);
  color: var(--wool);
}

.gin--dark-mode fieldset:not(.fieldgroup) {
  background-color: var(--darkest-gray);
}

/* upgrade status on /admin/reports/upgrade-status */
.upgrade-status-overview th {
  background-color: var(--dark-theme-gray);
}

.upgrade-status-next-step-update tr {
  background-color: var(--wool);
}

.upgrade-status-summary-environment tr.known-error a,
.upgrade-status-next-step-update tr a {
  color: var(--mediterranean-blue);
}

.upgrade-status-next-step-update tr:hover a {
  color: var(--gin-color-primary);
}

.upgrade-status-summary-label:hover {
  background-color: var(--darkest-gray);
}

.upgrade-status-result-circle .percentage {
  fill: var(--wool);
}

.upgrade-status-summary td.status-info-na {
  background-color: var(--gin-border-color-layer);
  color: var(--darkest-gray);
}

.upgrade-status-summary td.status-info-unchecked {
  background-color: var(--gin-color-primary);
  color: var(--darkest-gray);
}

.gin--edit-form .node-profile-form .field--name-title .form-element,
.gin--edit-form .node-profile-edit-form .field--name-title .form-element {
  font-size: 1rem;
  font-weight: 400;
  width: 484px;
}

/* stylelint-enable */

/*# sourceMappingURL=gin-custom.css.map */

